force-app/main/default/objects/ssot__ViolationEnforcementAction__dlm/fields/ssot__CaseProceedingResultId__c.field-meta.xml
<CustomField>
    <fullName>ssot__CaseProceedingResultId__c</fullName>
    <label>Case Proceeding Result</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CaseProceedingResultId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>