force-app/main/default/objects/ssot__ViolationEnforcementAction__dlm/fields/ssot__ComplianceDueDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__ComplianceDueDateTime__c</fullName>
    <label>Compliance Due Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ComplianceDueDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>