force-app/main/default/objects/ssot__ViolationEnforcementAction__dlm/fields/ssot__DaysOpenCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__DaysOpenCount__c</fullName>
    <label>Days Open</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DaysOpenCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>