force-app/main/default/objects/ssot__ViolationEnforcementAction__dlm/fields/ssot__rel_1718545867155_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1718545867155_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ViolationEnforcementAction_Regulator_rel</label>
    <referenceTo>ssot__RegulatoryCodeViolation__dlm</referenceTo>
    <relationshipLabel>ViolationEnforcementAction_Regulator_rel</relationshipLabel>
    <relationshipName>rel_1718545867155_end</relationshipName>
    <type>Lookup</type>
</CustomField>