force-app/main/default/objects/ssot__ViolationEnforcementAction__dlm/fields/ssot__rel_1718549030739_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1718549030739_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ViolationEnforcementAction_CaseProce_rel</label>
    <referenceTo>ssot__CaseProceedingResult__dlm</referenceTo>
    <relationshipLabel>ViolationEnforcementAction_CaseProce_rel</relationshipLabel>
    <relationshipName>rel_1718549030739_end</relationshipName>
    <type>Lookup</type>
</CustomField>