force-app/main/default/objects/ssot__ViolationEnforcementAction__dlm/fields/ssot__ViolationEnforcementActionPriority__c.field-meta.xml
<CustomField>
    <fullName>ssot__ViolationEnforcementActionPriority__c</fullName>
    <label>Violation Enforcement Action Priority</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ViolationEnforcementActionPriority</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>